# voice_command_bot

./: .gitignore  README.md
src/voice_command_bot/: package.xml  setup.cfg  setup.py
src/voice_command_bot/voice_command_bot/: voice_to_cmd.py
