<?xml version="1.0"?>
<package format="3">
  <name>voice_command_bot</name>
  <version>0.0.0</version>
  <description>Voice controlled robot using ROS 2 and speech recognition</description>

  <maintainer email="your_email@example.com">Sam Shoni Zacharia</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Optional: Other useful tags -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

